--- a/Board/src/main/resources/templates/navbar.html
+++ b/Board/src/main/resources/templates/navbar.html
@@ -15,7 +15,7 @@
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
 							<li class="nav-link"><a href="#">로그인</a></li>
-							<li class="nav-link"><a href="#">회원가입</a></li>
+							<li class="nav-link"><a href="@{/user/signup}">회원가입</a></li>
 						</li>
 					</ul>
 				</div>
