--- a/Board/src/main/resources/templates/navbar.html
+++ b/Board/src/main/resources/templates/navbar.html
@@ -14,8 +14,8 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<li class="nav-link"><a href="#">로그인</a></li>
-							<li class="nav-link"><a href="@{/user/signup}">회원가입</a></li>
+							<li class="nav-link"><a class="nav-link" th:href="@{/user/login}">로그인</a></li>
+							<li class="nav-link"><a class="nav-link" th:href="@{/user/signup}">회원가입</a></li>
 						</li>
 					</ul>
 				</div>
