--- a/Board/src/main/resources/templates/login_form.html
+++ b/Board/src/main/resources/templates/login_form.html
@@ -1,14 +1,14 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
-  <form th:action="@{/user/Login}" method="post">
+  <form th:action="@{/user/login}" method="post">
 
-<!--
     <div th:if="${param.error}">
       <div class="alert alert-danger">
-        사용자 ID 또는 비밀번호를 확인해 주세요
+        사용자 ID 또는 비밀번호를 확인해 주세요<br>
+        회원가입 후 로그인 하세요
       </div>
     </div>
--->
+    
     <div class="mb-3">
       <label for="username" class="form-label">사용자 ID</label>
       <input type="text" name="username" id="username" class="form-control">
