--- a/Board/src/main/resources/templates/navbar.html
+++ b/Board/src/main/resources/templates/navbar.html
@@ -14,9 +14,11 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<li class="nav-link"><a class="nav-link" th:href="@{/user/login}">로그인</a></li>
-							<li class="nav-link"><a class="nav-link" th:href="@{/user/signup}">회원가입</a></li>
-						</li>
+							<a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+							<a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/login}">로그아웃</a>
+							
+						<li class="nav-item">
+							<a class="nav-link" th:href="@{/user/signup}">회원가입</a>
 					</ul>
 				</div>
 				
