--- a/Board/src/main/resources/templates/question_detail.html
+++ b/Board/src/main/resources/templates/question_detail.html
@@ -1,16 +1,3 @@
-<!--<center>
-   <h1 th:text="${question.subject}"></h1>
-   <div th:text="${question.content}"></div>
-   <br>
-   <form th:action="@{|/answer/create/${question.id}|}" method="post">
-      <textarea name ="content" id="content" rows="5" cols="40"></textarea>
-      <br>
-      <br>
-      <input type="submit" value="답변등록">
-   </form>
-</center>
--->
-
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layout}">
 <head>
@@ -59,12 +46,15 @@
 	
 		<!--답변 작성-->
 		<form class="my-3" th:action="@{|/answer/create/${question.id}|}" method="post" th:object="${answerForm}">
-			<!--<div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
-						<div th:each="err:${#fields.allErrors()}" th:text="${err}"></div>
-				</div>
-			-->
 			<div th:replace="~{form_errors::formErrorsFragment}"></div>
+			
+			<!--
 			<textarea class ="form-control" th:field="*{content}" rows="5" cols="40" placeholder="여기에 답변을 입력하세요."></textarea>
+			답변 작성-->
+			
+			<textarea sec:authorize="isAnonymous()" disabled class="form-control" name="content" id="content" row="15"></textarea>
+			<textarea sec:authorize="isAuthenticated()" class="form-control" name="content" id="content" row="15"></textarea>
+			
 			<br>
 			<br>
 			<input class = "btn btn-primary" type="submit" value="답변등록">
