--- a/Board/src/main/resources/templates/answer_form.html
+++ b/Board/src/main/resources/templates/answer_form.html
@@ -9,14 +9,10 @@
 <body>
 	<div layout:fragment="content" class="container my-3">
 		<h5 class="my-3 border-bottom pb2">질문 등록</h5>
-		<form method="post" th:object="${questionForm}">
+		<form method="post" th:object="${answerForm}">
 			<input type ="hidden" th:name = "${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			<div th:replace="~{form_errors::formErrorsFragment}"></div>
 			
-			<div class="mb-3">
-				<label for="subject" class="form-label">제목</label>
-				<input type="text" th:field="*{subject}" class="form-control">
-			</div>
 			<div class="mb-3">
 				<label for="content" class="form-label">내용</label>
 				<textarea rows="15" th:field="*{content}" class="form-control"></textarea>
