--- a/Board/src/main/resources/templates/question_detail.html
+++ b/Board/src/main/resources/templates/question_detail.html
@@ -1,3 +1,16 @@
+<!--<center>
+   <h1 th:text="${question.subject}"></h1>
+   <div th:text="${question.content}"></div>
+   <br>
+   <form th:action="@{|/answer/create/${question.id}|}" method="post">
+      <textarea name ="content" id="content" rows="5" cols="40"></textarea>
+      <br>
+      <br>
+      <input type="submit" value="답변등록">
+   </form>
+</center>
+-->
+
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layout}">
 <head>
@@ -19,14 +32,23 @@
 				<div class="card-text" style="white-space: pre-line;" th:text="${question.content}"></div>
 				<div class="d-flex justify-content-end">
 					<div class="badge bg-light text-dark p-2 text-start">
-					
-						<div class="mb-2">
-							<span th:if="${question.author !=null}"
-							th:text="${question.author.username}"></span>
-						</div>
-					
+						<div class="my-2"><span th:if="${question.author != null}" th:text="${question.author.username}"></span></div>
 						<div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
 					</div>					
+				</div>
+				<!--버튼 수정 버튼-->
+				<div class="my-3">
+					<a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
+					sec:authorize="isAuthenticated()"
+					th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+					th:text ="수정"></a>
+					
+					<a href="javascript:void(0);"
+					th:data-uri="@{|/question/delete/${question.id}|}" class="delete btn btn-sm btn-outline-secondary"
+					sec:authorize="isAuthenticated()"
+					th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+					th:text ="삭제"></a>
+										
 				</div>
 			</div>
 		</div>
@@ -41,14 +63,16 @@
 				<div class = "card-text" style = "white-space: pre-line;" th:text="${answer.content}"></div>
 				<div class="d-flex justify-content-end">
 					<div class="badge bg-light text-dark p-2 text-start">
-					
-						<div class="mb-2">
-							<span th:if="${question.author !=null}"
-							th:text="${question.author.username}"></span>
-						</div>
-					
+						<div class="my-2"><span th:if="${answer.author != null}" th:text="${answer.author.username}"></span></div>
 						<div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
 					</div>					
+				</div>
+				<!--수정버튼-->
+				<div class="my-3">
+					<a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
+					sec:authorize="isAuthenticated()"
+					th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+					th:text ="수정"></a>
 				</div>
 			</div>
 		</div>
@@ -58,20 +82,31 @@
 	
 		<!--답변 작성-->
 		<form class="my-3" th:action="@{|/answer/create/${question.id}|}" method="post" th:object="${answerForm}">
+			<!--<div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+						<div th:each="err:${#fields.allErrors()}" th:text="${err}"></div>
+				</div>
+			-->
 			<div th:replace="~{form_errors::formErrorsFragment}"></div>
 			
-			<!--
-			<textarea class ="form-control" th:field="*{content}" rows="5" cols="40" placeholder="여기에 답변을 입력하세요."></textarea>
-			답변 작성-->
 			
-			<textarea sec:authorize="isAnonymous()" disabled class="form-control" name="content" id="content" row="15"></textarea>
-			<textarea sec:authorize="isAuthenticated()" class="form-control" name="content" id="content" row="15"></textarea>
-			
+			<textarea sec:authorize="isAnonymous()" disabled class ="form-control" th:field="*{content}" rows="5" cols="40" placeholder="여기에 답변을 입력하세요."></textarea>
+			<textarea sec:authorize="isAuthenticated()" class ="form-control" th:field="*{content}" rows="5" cols="40" placeholder="여기에 답변을 입력하세요."></textarea>
+						
 			<br>
 			<br>
 			<input class = "btn btn-primary" type="submit" value="답변등록">
 		</form>
 	</div>
 	</div>
+<script layout:fragment="script" type="text/javascript">
+	const delete_elements = document.getElementsByClassName("delete");
+	Array.from(delete_elements).forEach(function(element){
+		element.addEventListener('click', function(){
+			if(confirm("삭제하시겠습니까?")){
+				location.href = this.dataset.uri;
+			};
+		});
+	});
+</script>
 </body>
 </html>
