--- a/Board/src/main/resources/templates/question_form.html
+++ b/Board/src/main/resources/templates/question_form.html
@@ -2,20 +2,21 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layout}">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>답변 페이지</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>답변 페이지</title>
 </head>
 <body>
 	<div layout:fragment="content" class="container my-3">
 		<h5 class="my-3 border-bottom pb2">질문 등록</h5>
 		<form method="post" th:object="${questionForm}">
-			<input type ="hidden" th:name = "${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
 			<div th:replace="~{form_errors::formErrorsFragment}"></div>
-			
+
 			<div class="mb-3">
-				<label for="subject" class="form-label">제목</label>
-				<input type="text" th:field="*{subject}" class="form-control">
+				<label for="subject" class="form-label">제목</label> <input
+					type="text" th:field="*{subject}" class="form-control">
 			</div>
 			<div class="mb-3">
 				<label for="content" class="form-label">내용</label>
