--- a/Board/src/main/resources/templates/signup_form.html
+++ b/Board/src/main/resources/templates/signup_form.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorate="~{layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>회원가입</title>
+<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
 </head>
 <body>
 	<div layout:fragment="content" class="container my-3">
-   <h5 class="my-3 border-bottom pb2">회원가입</h5>
-    <form th:action="@{/user/signup}" method="post"th:object = "${userCreateForm}">
-		<div th:replace="~{form_errors::formErrorsFragment}"></div>
+		<h5 class="my-3 border-bottom pb2">회원가입</h5>
+		<form th:action="@{/user/signup}" method="post"
+			th:object="${userCreateForm}">
+			<div th:replace="~{form_errors::formErrorsFragment}"></div>
 
-        <div class="mb-3">
-            <label for="username" class="form-label">사용자 이름</label>
-            <input type="text" th:field="*{username}" class="form-control">
-        </div>
+			<div class="mb-3">
+				<label for="username" class="form-label">사용자 이름</label> <input
+					type="text" th:field="*{username}" class="form-control">
+			</div>
 
-		<div class="mb-3">
-		    <label for="password" class="form-label">비밀번호</label>
-		    <input type="password" th:field="*{password1}" class="form-control">
-		</div>
+			<div class="mb-3">
+				<label for="password" class="form-label">비밀번호</label> <input
+					type="password" th:field="*{password1}" class="form-control">
+			</div>
 
-		<div class="mb-3">
-		    <label for="password" class="form-label">비밀번호 확인</label>
-		    <input type="password" name="password2" class="form-control">
-		</div>
+			<div class="mb-3">
+				<label for="password" class="form-label">비밀번호 확인</label> <input
+					type="password" name="password2" class="form-control">
+			</div>
 
-		<div class="mb-3">
-		    <label for="email" class="form-label">이메일</label>
-		    <input type="text" th:field="*{email}" class="form-control">
-		</div>
-        <input type="submit" value="회원가입" class="btn btn-primary my-2">
-    </form>
+			<div class="mb-3">
+				<label for="email" class="form-label">이메일</label> <input type="text"
+					th:field="*{email}" class="form-control">
+			</div>
+			<input type="submit" value="회원가입" class="btn btn-primary my-2">
+		</form>
 	</div>
 </body>
 </html>
