--- a/Board/src/main/resources/templates/question_detail.html
+++ b/Board/src/main/resources/templates/question_detail.html
@@ -85,6 +85,8 @@
 
 			<!--답변 반복 시작-->
 			<div class="card my-3" th:each="answer : ${question.answerList}">
+				<!-- 엥커기능 추가 -->
+				<a th:id="|answer${answer.id}|"></a>
 				<div class="card-body">
 					<div class="card-text" style="white-space: pre-line;"
 						th:text="${answer.content}"></div>
