--- a/Board/src/main/resources/templates/question_list.html
+++ b/Board/src/main/resources/templates/question_list.html
@@ -9,65 +9,124 @@
 <!-- CSS 파일 링크 -->
 </head>
 <body>
-	<center>
-		<div layout:fragment="content" class="container my-3">
-			<table class="table">
-				<caption>질문 목록</caption>
-				<thead class="table-dark">
-					<tr>
-						<td>번호</td>
-						<td sytle="width:50%">제목</td>
-						<th>작성자</th>
-						<td>작성일자</td>
-					</tr>
-				</thead>
 
-
-				<tbody>
-					<tr th:each="question, loop : ${paging}">
-						<td
-							th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
-						<td><a th:href="@{|/question/detail/${question.id}|}"
-							th:text="${question.subject}"></a> <span
-							class="text-danger small ms-2"
-							th:if="${#lists.size(question.answerList) > 0}"
-							th:text="${#lists.size(question.answerList)}"> </span></td>
-						<td><span th:if="${question.author != null}"
-							th:text="${question.author.username}"></span></td>
-
-						<td
-							th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
-					</tr>
-				</tbody>
-
-
-			</table>
-			<!-- 페이징 처리 시작 -->
-			<div th:if="${!paging.isEmpty()}">
-				<ul class="pagination justify-content-center">
-					<!-- 이전 페이지 -->
-					<li class="page-item"
-						th:classappend="${!paging.hasPrevious} ? 'disabled'"><a
-						class="page-link" th:href="@{|?page=${paging.number-1}|}"> <span>이전</span>
-					</a></li>
-
-					<!-- 페이지 번호 반복 -->
-					<li th:each="page : ${#numbers.sequence(0, paging.totalPages-1)}"
-						th:if="${page >= paging.number-2 and page <= paging.number+2}"
-						th:classappend="${page == paging.number} ? 'active'"
-						class="page-item"><a th:text="${page}" class="page-link"
-						th:href="@{|?page=${page}|}"></a></li>
-
-					<!-- 다음 페이지 -->
-					<li class="page-item"
-						th:classappend="${!paging.hasNext} ? 'disabled'"><a
-						class="page-link" th:href="@{|?page=${paging.number+1}|}"> <span>다음</span>
-					</a></li>
-				</ul>
+	<div layout:fragment="content" class="container my-3">
+		<div class="row my-3">
+			<div class="col-6">
+				<a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
 			</div>
-			<!-- 페이징 처리 끝 -->
-			<a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+			<div class="col-6">
+				<div class="input-group">
+					<input type="text" id="search_kw" class="form-control"
+						th:value="${kw}" placeholder="검색어를 입력하세요">
+					<button class="btn btn-outline-secondary" type="button"
+						id="btn_search">찾기</button>
+				</div>
+			</div>
 		</div>
-	</center>
+		<form th:action="@{/question/list}" method="get" id="searchForm">
+			<input type="hidden" id="kw" name="kw" th:value="${kw}"> <input
+				type="hidden" id="page" name="page" th:value="${paging.number}">
+		</form>
+
+
+		<table class="table">
+			<caption>질문 목록</caption>
+			<thead class="table-dark">
+				<tr class="text-center">
+					<td>번호</td>
+					<td style="width: 50%">제목</tdstyle>
+					<td>작성자</td>
+					<td>작성일자</td>
+				</tr>
+			</thead>
+
+
+			<tbody>
+				<tr th:each="question, loop : ${paging}">
+					<td th:text="${question.id}"></td>
+					<!--${loop.count} -->
+					<!--${paging.getTotalElements - (paging.number * paging.size) - loop.index}-->
+					<td><a th:href="@{|/question/detail/${question.id}|}"
+						th:text="${question.subject}"></a> <span
+						class="text-danger small ms-2"
+						th:if="${#lists.size(question.answerList)>0}"
+						th:text="${#lists.size(question.answerList)}"></span></td>
+					<td><span th:if="${question.author != null}"
+						th:text="${question.author.username}"></span></td>
+					<td
+						th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+				</tr>
+			</tbody>
+		</table>
+
+		<!-- 페이지 네이션 -->
+		<div th:if="${!paging.isEmpty()}">
+			<ul class="pagination justify-content-center">
+				<li class="page-item"><a class="page-link"
+					href="javascript:void(0);" th:data-page="0"> <span><<</span>
+				</a></li>
+
+				<!--				
+				<li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+					<a class="page-link" th:href="@{|?page=${paging.number-1}|}">
+						<span>이전</span>
+					</a>
+				</li>-->
+
+				<!--				<li th:each="page : ${#numbers.sequence(0, paging.totalPages-1)}"
+					th:if="${page >= paging.number -2 and page <= paging.number+2}"
+					th:classappend="${page==paging.number} ? 'active'" class ="page-item">
+					<a th:text="${page}+1" class="page-link" th:href="@{|?page=${page}|}"></a>
+				</li>-->
+
+
+				<!-- 페이지 번호 표시 (5개 유지) -->
+				<li
+					th:each="page : ${#numbers.sequence(
+				        paging.number <= 2 ? 0 : paging.number - 2, 
+				        paging.number >= paging.totalPages - 3 ? paging.totalPages - 1 : paging.number + 2)}"
+					th:classappend="${page == paging.number} ? 'active'"
+					class="page-item"><a th:text="${page + 1}" class="page-link"
+					href="javascript:void(0);" th:data-page="${page}"></a></li>
+
+
+				<!--				<li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+					<a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+						<span>다음</span>
+					</a>
+				</li>
+-->
+				<li class="page-item"><a class="page-link"
+					href="javascript:void(0);" th:data-page="${paging.totalPages - 1}">
+						<span>>></span>
+				</a></li>
+
+			</ul>
+		</div>
+
+	</div>
+
 </body>
+
+<script type="text/javascript" layout:fragment="script">
+	const page_elements = document.getElementsByClassName("page-link");
+
+	Array.from(page_elements).forEach(function(element) {
+		element.addEventListener("click", function() {
+			document.getElementById('page').value = this.dataset.page;
+			document.getElementById("searchForm").submit();
+		});
+	});
+
+	const btn_search = document.getElementById("btn_search");
+
+	btn_search.addEventListener("click", function() {
+		document.getElementById("kw").value = document
+				.getElementById('search_kw').value;
+		document.getElementById('page').value = 0;
+		document.getElementById("searchForm").submit();
+	});
+</script>
+
 </html>
